# vizwiz-fewshot

./: .gitignore  README.md  pyproject.toml
src/: vizwiz.py
